set(TEST_PROJECT "test_${PROJECT}")
enable_testing()
find_package(Check REQUIRED)
find_package(Threads)
include_directories(. ../src ${CHECK_INCLUDE_DIRS})
file(GLOB_RECURSE PROJECT_SOURCES "*.c")
add_executable(${TEST_PROJECT} ${PROJECT_SOURCES})
set(LIBS ${LIBS} ${PROJECT} ${CHECK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TEST_PROJECT} ${LIBS})
add_test(${TEST_PROJECT} ${CMAKE_CURRENT_BANARY_DIR}/${PROJECT})
