set(TEST_PROJECT "test_${PROJECT}")
enable_testing()
find_package(Check REQUIRED)
find_package(Threads)
include_directories(. ../src ${CHECK_INCLUDE_DIRS})
file(GLOB_RECURSE PROJECT_SOURCES "../src/o_*.c")
file(GLOB_RECURSE TEST_PROJECT_SOURCES "*.c")
set(CMAKE_C_FLAGS "-g -O0 -std=gnu11 -fprofile-arcs -ftest-coverage")
add_executable(${TEST_PROJECT} ${PROJECT_SOURCES} ${TEST_PROJECT_SOURCES})
set(LIBS ${LIBS} ${PROJECT} ${CHECK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} gcov)
target_link_libraries(${TEST_PROJECT} ${LIBS})
add_test(${TEST_PROJECT} ${CMAKE_CURRENT_BANARY_DIR}/${PROJECT})
include(CodeCoverage)
setup_target_for_coverage(${PROJECT}_coverage ${TEST_PROJECT} coverage)
